--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -44,6 +44,9 @@
   flex-direction: row;
   align-items: flex-end;
   text-decoration: none;
+  @media (max-width: 350px) {
+    margin-right: 3rem;
+  }
 }
 
 .navTab {
@@ -63,7 +66,7 @@
   border-radius: 5px 5px 0 0;
   width: 100%;
   height: 2rem;
-  min-width: 75px;
+  min-width: 6rem;
   text-decoration: none;
   color: #fff;
   &:hover {
